--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     ></script>
     <title>wishfarm</title>
   </head>
-  <body>
+  <body class="has-navbar-fixed-top">
     <noscript>
       <strong
         >We're sorry but wishfarm doesn't work properly without JavaScript
